--- a/app/views/themes/waterfall/wine_details/share/_photos.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_photos.html.erb
@@ -14,7 +14,7 @@
 <ul class="wine_img">
 	<% unless @wine_detail.photos.blank? %>
 	<% @wine_detail.photos.each do |photo| %>
-    <li><%= link_to image_tag(photo.image_url(:thumb_x), :width => 100, :height => 100), wine_photo_path(photo.id) %></li>
+    <li><%= link_to image_tag(photo.image_url(:thumb_x), :width => 100, :height => 100), wine_photo_path(@wine_detail.id, photo.id) %></li>
   <% end %>
   <% else %>
 	 <li>暂时没有图片.</li>
