--- a/app/views/themes/waterfall/wine_details/share/_comments.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_comments.html.erb
@@ -29,21 +29,14 @@
 				<div class="content"><%= comment.body %></div>
 				<div class="userful">
 					<%= link_to  vote_comment_path(comment.id), :remote => true, :class => "ajax vote"  do %>
-		        有用(<span class="likes_count"><%=comment.votes_count %></span>)
-		      <% end %>
+		                有用(<span class="likes_count"><%=comment.votes_count %></span>)
+		             <% end %>
 					| 
-					<%= link_to  reply_wine_comment_path(@wine_detail.id, comment.id),
-		          :remote => true,
-		          :class => "ajax reply_comment_button",
-		          :id => "reply_#{comment.id}" do %>
-		      回复<span class="reply_comment_count">(<%= comment.children.size %>)</span><span class="reply_result"></span>
-		      <% end %>
+                    <%=  reply_comment(comment) %>
 				</div>
 				
 				<div id="reply_comment_<%= comment.id %>" class="replybox" style="display: none">
 			  </div>
-			
-				
 				
 			</div>
 			<div class="clear"></div>
