--- a/app/views/themes/waterfall/wineries/show.html.erb
+++ b/app/views/themes/waterfall/wineries/show.html.erb
@@ -1,6 +1,11 @@
 <% content_for :css do  %>
     <%= theme_stylesheet_link_tag "winery" %>
 <% end %>
+
+<div id="comment_form"  style="display: none" >
+
+</div>
+
 <div id="wrapper950">
   <div class="whitespace mb30">
     <%= render "winery_detail" %>
@@ -10,7 +15,7 @@
     <div class="left">
       <div class="section">
         <div class="title">
-          <h2>照片<span class="font12 more"><%= link_to "共#{@winery.photos.size}张", photos_list_winery_path(@winery) %></span></h2>
+          <h2>照片<span class="font12 more"><%= link_to "共#{@winery.photos_count}张", photos_list_winery_path(@winery) %></span></h2>
         </div>
 
         <div class="content">
@@ -23,7 +28,7 @@
       </div>
       <%= render :partial => "info_item", :collection => @winery.info_items %>
       <div class="section">
-        <div class="title"><h2>所有酒款<span class="font12 more"><%= link_to "(共#{@winery.wines.size}支)" %></span></h2></div>
+        <div class="title"><h2>所有酒款<span class="font12 more"><%= link_to "(共#{@winery.wines_count}支)" %></span></h2></div>
         <div class="content">
           <ul class="wine_list">
             <%= render :partial => "wine", :collection => @wines %>
@@ -35,11 +40,15 @@
 
       <div class="seciont last">
          <div class="title">
-           <%= link_to "#", :class => "btn_gray float_r font12" do %>
-             <span>添加评论</span>
+           <%= link_to new_winery_comment_path(@winery, :do => "comment"), :class => "btn_gray float_r font12", :remote => true do %>
+                <span>添加评论</span>
            <% end %>
            <h2>评论<span class="font12 more"><%= link_to "(共条...)", "#" %></span></h2>
          </div>
+
+        <div class="wp_space_line ptb30">
+          <%= render "wine_details/share/comments"  %>
+        </div>
       </div>
     </div>
 
