--- a/app/views/themes/waterfall/wineries/_winery_detail.html.erb
+++ b/app/views/themes/waterfall/wineries/_winery_detail.html.erb
@@ -44,9 +44,25 @@
          <li class="follow"><%= link_to "#{@winery.followers_count}个关注", "#" %></li>
          <li class="comment"><%= link_to "#{@winery.comments_count}条评论", "#" %></li>
        </ul>
-       <%= link_to "#", :class => "btn_gray_b mr5" do %>
-        <span>关注</span>
+
+
+       <% unless user_signed_in? %>
+           <%= link_to  new_winery_comment_path(@winery.id, :do => "follow"), :class => [:btn_gray_b, :mr5, :ajax], :remote => true do %>
+               <span>关注</span>
+           <% end %>
+           <%# 用户已经登陆， 检查是否已经关注 %>
+       <% else %>
+           <%  if @winery.is_followed? current_user %>
+			<span class="icon_fol mr5">已关注<span class="cancl_fol">
+				 <%= link_to "取消", cancle_follow_winery_comments_path(@winery.id) %>
+			</span>
+           <% else %>
+               <%= link_to new_winery_comment_path(@winery.id, :do => "follow"), :class => [:btn_gray_b, :mr5, :ajax], :remote => true do %>
+                   <span>关注</span>
+               <% end %>
+           <% end %>
        <% end %>
+
        <%= link_to new_winery_comment_path(@winery.id, :do => "comment"), :class => [:btn_gray_b, :mr5, :ajax], :remote => true do %>
            <span>评论</span>
        <% end %>
