修改评分js 和 count_observer 中comments_count 错误

--- a/app/views/themes/waterfall/comments/_star_rate.js.erb
+++ b/app/views/themes/waterfall/comments/_star_rate.js.erb
@@ -28,7 +28,7 @@ $(function(){
         input: $("input[name='rate_value']"),
         tagName: 'li',
         template: _.template($('#star_item').html()),
-        textValue: ['欠佳',   '可接受','出色','非常不错','质量一流'],
+        textValue: ['','欠佳', '可接受', '出色', '非常不错', '质量一流'],
         events: {
             "mouseover .star img"  : "changeStarColorAsYellow",
             'mouseleave .star img': 'initializeRateValue',
@@ -87,7 +87,14 @@ $(function(){
             // this.model.destroy();
         },
         setText: function(num) {
-            $(".text_value").text(this.textValue[num]);
+            if(num > 0){
+                $(".text_value").text(this.textValue[num]);
+            }
+            else
+            {
+                $(".text_value").text("");
+            }
+
         }
     });
 
