--- a/app/views/admin/wineries/_show_photos.html.erb
+++ b/app/views/admin/wineries/_show_photos.html.erb
@@ -1,3 +1,3 @@
 <% photos.each do |photo| %>
-   <%= image_tag(photo.image_url(:wy_thumb))  %>
+   <%= image_tag(photo.image_url(:thumb))  %>
 <% end %>
