--- a/app/views/themes/waterfall/photos/winery_photo_list.html.erb
+++ b/app/views/themes/waterfall/photos/winery_photo_list.html.erb
@@ -4,7 +4,7 @@
 
 <div id="wrapper950">
     <div class="whitespace mb30">
-         <%= render "winery_detail" %>
+         <%= render "themes/waterfall/wineries/winery_detail" %>
     </div>
 
     <div class="whitespace winerymain">
@@ -21,7 +21,7 @@
                   </div>
                   <div class="content">
                       <ul class="winery_pic_list">
-                          <%= render :partial => "photos_list" %>
+                          <%= render :partial => "themes/waterfall/photos/photos_list" %>
                       </ul>
                       <div class="clear"></div>
                   </div>
@@ -35,7 +35,7 @@
              <div class="title"><h3><a name="05" id="05"></a>热门酒款</h3></div>
              <div class="main">
                <ul class="sidewine">
-                 <%= render :partial => "hot_wine", :collection => @hot_wines, :as => :wine_detail %>
+                 <%= render :partial => "themes/waterfall/wineries/hot_wine", :collection => @hot_wines, :as => :wine_detail %>
                  <div class="clear"></div>
                </ul>
              </div>
