--- a/app/views/themes/waterfall/share/_sns_icons.html.erb
+++ b/app/views/themes/waterfall/share/_sns_icons.html.erb
@@ -1,7 +1,7 @@
-<div class="share float_r">分享到：
-	<%= link_to_image "icon/sina_s_on.png", "#", {}, {:width => 17, :height => 17, :align => :absmiddle, :alt => "腾讯"} %>
-	<%= link_to_image "icon/tencen_s_on.png","#", {}, {:width => 17, :height => 17, :align => :absmiddle, :alt => "腾讯"} %>
-	<%= link_to_image "icon/douban_s_on.png","#", {}, {:width => 17, :height => 17, :align => :absmiddle, :alt => "腾讯"} %>
-	<%= link_to_image "icon/kaixin_s_on.png", "#", {}, {:width => 17, :height => 17, :align => :absmiddle, :alt => "腾讯"} %>
-	<%= link_to_image "icon/renren_s_on.png", "#", {}, {:width => 17, :height => 17, :align => :absmiddle, :alt => "腾讯"} %> |
-</div>
+分享到：
+<%= link_to_image "icon/sina_s_on.png", "#", {}, {:width => 17, :height => 17, :align => :absmiddle, :alt => "腾讯"} %>
+<%= link_to_image "icon/tencen_s_on.png","#", {}, {:width => 17, :height => 17, :align => :absmiddle, :alt => "腾讯"} %>
+<%= link_to_image "icon/douban_s_on.png","#", {}, {:width => 17, :height => 17, :align => :absmiddle, :alt => "腾讯"} %>
+<%= link_to_image "icon/kaixin_s_on.png", "#", {}, {:width => 17, :height => 17, :align => :absmiddle, :alt => "腾讯"} %>
+<%= link_to_image "icon/renren_s_on.png", "#", {}, {:width => 17, :height => 17, :align => :absmiddle, :alt => "腾讯"} %>
+
