--- a/app/views/themes/waterfall/wineries/show.html.erb
+++ b/app/views/themes/waterfall/wineries/show.html.erb
@@ -15,7 +15,7 @@
     <div class="left">
       <div class="section">
         <div class="title">
-          <h2>照片<span class="font12 more"><%= link_to "共#{@winery.photos_count}张", photos_list_winery_path(@winery) %></span></h2>
+          <h2>照片<span class="font12 more"><%= link_to "共#{@winery.photos_count}张", winery_photos_path(@winery) %></span></h2>
         </div>
 
         <div class="content">
