--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -107,17 +107,19 @@ textarea.wine_intro {width:500px;height:200px;}
 
 /*----------login register---------*/
 #login {width:772px;margin:0 auto;padding-top:100px;}
-#login .error {margin-bottom:20px;}
-.loginbox {margin-right:20px;}
-.loginbox, .registerbox {width:376px;background:url(../images/bg/login_m.jpg) repeat-y left top;float:left;}
-.loginbox .top, .registerbox .top {background:url(../images/bg/login_t.jpg) no-repeat left top;height:54px;text-align:center; line-height:50px;padding-top:5px;font-size:16px;font-weight:bold;color:#666;}
-.loginbox .bot, .registerbox .bot {background:url(../images/bg/login_b.jpg) no-repeat left bottom;height:12px;}
-.loginbox .mid {padding:20px 28px;height:150px;}
-.registerbox .mid {padding:60px 28px 20px 28px;height:110px;}
-.loginbox input.text {border:1px solid #fff;background-color:#fff;height:25px;width:300px;padding:0; vertical-align:middle;}
-.loginbox .un, .loginbox .pw {background:url(../images/bg/login_input.jpg) no-repeat left top;height:27px;padding:8px 10px;width:300px;margin:0 0 10px 0;}
-.loginbox .rember_pw {line-height:41px;}
-.loginbox .rember_pw a:hover {text-decoration:none;}
+#login .error, #register .error {margin-bottom:20px;}
+.login .boxstyle {margin: 0 20px 0 0;}
+.boxstyle {width:376px;background:url(../images/bg/login_m.jpg) repeat-y left top;float:left;}
+.boxstyle .top {background:url(../images/bg/login_t.jpg) no-repeat left top;height:54px;text-align:center; line-height:50px;padding-top:5px;font-size:16px;font-weight:bold;color:#666;}
+.boxstyle .bot {background:url(../images/bg/login_b.jpg) no-repeat left bottom;height:12px;}
+.login .boxstyle .mid {padding:20px 28px;height:150px;}
+.register .boxstyle .mid {padding:60px 28px 20px 28px;height:110px;}
+.boxstyle input.text {border:1px solid #fff;background-color:#fff;height:25px;width:300px;padding:0; vertical-align:middle;}
+.boxstyle .un, .boxstyle .pw {background:url(../images/bg/login_input.jpg) no-repeat left top;height:27px;padding:8px 10px;width:300px;margin:0 0 10px 0;}
+.boxstyle .rember_pw {line-height:41px;}
+.boxstyle .rember_pw a:hover {text-decoration:none;}
+#register {width:376px;margin:0 auto;padding-top:100px;}
+#register .boxstyle .mid {padding:20px 28px;}
 
 /*icon*/
 .icon_mail, .icon_like, .icon_add_album, .icon_delet, .icon_edit, .icon_add, .icon_delet2, .icon_comment, .icon_fol, .icon_fol_e, .icon_cellar {background:url(../images/icon/icon_all.gif) no-repeat;display:inline-block;}
