register page update

--- a/public/template/register.html
+++ b/public/template/register.html
@@ -48,12 +48,16 @@
                       <p>邮件地址<span class="red">*</span></p>
                       <div class="pw"><input class="text"  name="" type="password" placeholder="邮件地址" /></div>
                       <p>所在地<span class="red">*</span></p>
-                      <div class="location"><select name="">
+                      <div class="location">
+                      <select name="">
                         <option>上海</option>
                         <option>北京</option>
                         <option>广州</option>
                       </select></div>
-                      <div class="mt20"><a href="register.html"><img src="images/common/register_submit.jpg" width="176" height="51" alt="马上注册" /></a></div>
+                      <div class="submit">
+                      	<span class="float_r"><input class="checkbox" name="" type="checkbox" value="" /> 我已阅读并同意<a href="#">使用条款</a></span>
+                          <a href="register.html"><img src="images/common/register_submit.jpg" width="138" height="51" alt="马上注册" /></a>
+                      </div>
                   </div>
                     <div class="bot"></div>
                 </div>
