--- a/public/template/register.html
+++ b/public/template/register.html
@@ -46,7 +46,7 @@
                       <p>密码<span class="red">*</span></p>
                       <div class="pw"><input class="text"  name="" type="password" placeholder="密码" /></div>
                       <p>邮件地址<span class="red">*</span></p>
-                      <div class="pw"><input class="text"  name="" type="password" placeholder="邮件地址" /></div>
+                      <div class="pw"><input class="text"  name="" type="text" placeholder="邮件地址" /></div>
                       <p>所在地<span class="red">*</span></p>
                       <div class="location">
                       <select name="">
