--- a/app/views/themes/waterfall/wineries/_follower.html.erb
+++ b/app/views/themes/waterfall/wineries/_follower.html.erb
@@ -1,5 +1,18 @@
-<li>
-  <%= link_to user_path(user) do %>
-    <%= user_avatar_tag(user, :thumb_name => :middle, :width => 50, :height => 50, :alt => user.name) %>
-  <% end %>
-</li>
+<div class="sidebox">
+  <div class="title">
+    <h3>关注该酒庄的人<span class="font12 more"><%= link_to "(共#{@winery.followers_count}人)" %></span></h3>
+  </div>
+
+  <div class=”main“>
+    <ul class="follower">
+      <%@users.each do |user| %>
+          <li>
+            <%= link_to user_path(user) do %>
+                <%= user_avatar_tag(user, :thumb_name => :middle, :width => 50, :height => 50, :alt => user.name) %>
+            <% end %>
+          </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
