--- a/app/views/themes/waterfall/wineries/_hot_wine.html.erb
+++ b/app/views/themes/waterfall/wineries/_hot_wine.html.erb
@@ -1,9 +1,20 @@
-<li>
-  <%= link_to wine_path(wine_detail) do %>
-    <%= wine_cover_tag wine_detail, :thumb_name => :thumb_x, :width => 70, :height => 70 %>
-    <div class="info">
-      <h3 class="zh"><%= link_to wine_detail.cname, wine_path(wine_detail) %></h3>
-      <h3 class="en"><%= link_to wine_detail.ename, wine_path(wine_detail) %></h3>
-    </div>
-  <% end %>
-</li>
+<div class="sidebox">
+  <div class="title"><h3><a name="05" id="05"></a>热门酒款</h3></div>
+  <div class="main">
+    <ul class="sidewine">
+      <% @hot_wines.each do |wine_detail| %>
+          <li>
+            <%= link_to wine_path(wine_detail) do %>
+                <%= wine_cover_tag wine_detail, :thumb_name => :thumb_x, :width => 70, :height => 70 %>
+                <div class="info">
+                  <h3 class="zh"><%= link_to wine_detail.cname, wine_path(wine_detail) %></h3>
+                  <h3 class="en"><%= link_to wine_detail.ename, wine_path(wine_detail) %></h3>
+                </div>
+            <% end %>
+          </li>
+      <% end %>
+      <div class="clear"></div>
+    </ul>
+  </div>
+</div>
+
