--- a/app/views/themes/waterfall/mine/_sub_nav.html.erb
+++ b/app/views/themes/waterfall/mine/_sub_nav.html.erb
@@ -3,24 +3,24 @@
 <% end %>
 <% if params[:controller].include? "mine" %>
 <% sub_menu = {
-     "wine_favorite"     => [mine_cellar_path(@user.cellar.id), @user.wine_cellar_count],
-     "wine_follows"     => ["/mine/wine_follows", @user.wine_follows_count],
-     "winery_follows"   => ["/mine/winery_follows", @user.wine_follows_count],
+     "wine_favorite"     => [mine_cellar_path(@user.cellar.id), @user.cellar.items_count],
+     "wine_follows"     => ["/mine/wine_follows", @user.wine_followings_count],
+     "winery_follows"   => ["/mine/winery_follows", @user.winery_followings_count],
      "comments"  => ["/mine/comments", @user.comments_count],
      # "testing_notes"  => ["testing_notes", 0],
-     "followings"     => ["/mine/followings", @user.user_followes_count],
-     "followers"    => ["/mine/followers", @user.user_followeds_count],
+     "followings"     => ["/mine/followings", @user.followings_count],
+     "followers"    => ["/mine/followers", @user.followers_count],
      "albums"           => ["/mine/albums/", @user.albums_count]
 } %>
 <% else %>
 <% sub_menu = {
-        "wine_favorite"     => [user_cellar_path(@user.id), @user.wine_cellar_count],
-     "wine_follows"     => [wine_follows_user_path(@user.id), @user.wine_follows_count],
-     "winery_follows"   => [winery_follows_user_path(@user.id), @user.wine_follows_count],
+     "wine_favorite"     => [user_cellar_path(@user.id), @user.cellar.items_count],
+     "wine_follows"     => [wine_follows_user_path(@user.id), @user.wine_followings_count],
+     "winery_follows"   => [winery_follows_user_path(@user.id), @user.winery_followings_count],
      "comments"  => [comments_user_path(@user.id), @user.comments_count],
      # "testing_notes"  => ["testing_notes", 0],
-     "followings"     => [followings_user_path(@user.id), @user.user_followes_count],
-     "followers"    => [followers_user_path(@user.id), @user.user_followeds_count],
+     "followings"     => [followings_user_path(@user.id), @user.followings_count],
+     "followers"    => [followers_user_path(@user.id), @user.followers_count],
      "albums"           => [user_albums_path(@user.id, :trailing_slash => true), @user.albums_count]
  } %>
 <% end %>
