--- a/app/views/themes/waterfall/mine/index.html.erb
+++ b/app/views/themes/waterfall/mine/index.html.erb
@@ -1,6 +1,6 @@
  <div class="whitespace">
 <div id="hp">
-  <%= render "sub_nav" %>
+  <%= render "mine/sub_nav" %>
       <div id="cellar">
           <div class="title_btn">
                 <h1>我的酒窖 <span class="font12">(共15支)</span></h1>
