--- a/app/views/themes/waterfall/photos/winery_photo_detail.html.erb
+++ b/app/views/themes/waterfall/photos/winery_photo_detail.html.erb
@@ -3,13 +3,13 @@
 <% end %>
 <div id="wrapper950">
   <div class="whitespace mb30">
-    <%= render "themes/waterfall/wineries/winery_detail" %>
+    <%= render "wineries/winery_detail" %>
   </div>
   <div class="whitespace winerymain">
     <div class="left">
       <div class="section">
         <div class="title">
-          <%= link_to photos_list_winery_path(@winery), :class => "btn_gray float_r" do %>
+          <%= link_to winery_photos_path(@winery), :class => "btn_gray float_r" do %>
               <span>返回</span>
           <% end %>
           <%= link_to upload_mine_albums_path, :class => "btn_gray float_r mr5" do %>
@@ -23,12 +23,12 @@
             <div class="mb20">
               <div class="pre_next">
                 <% if previous_photo = previous_page(@winery.photo_ids, @photo.id) %>
-                    <%= link_to photo_winery_path(@winery, :photo_id => previous_photo), :class => "btn_gray" do %>
+                    <%= link_to winery_photo_path(@winery, previous_photo), :class => "btn_gray" do %>
                         <span>前一张</span>
                     <% end %>
                 <% end %>
                 <% if next_photo = next_page(@winery.photo_ids, @photo.id) %>
-                    <%= link_to photo_winery_path(@winery, :photo_id => next_photo), :class => "btn_gray" do %>
+                    <%= link_to winery_photo_path(@winery, next_photo), :class => "btn_gray" do %>
                         <span>后一张</span>
                     <% end %>
                 <% end %>
@@ -41,23 +41,37 @@
 
             <div class="info">
               <div class="like float_r"><%= link_to "赞(#{@photo.votes_count})", "#", :class => "icon_like" %></div>
-              <div class="share float_r"><%= render "themes/waterfall/share/sns_icons"%></div>
+              <div class="share float_r"><%= render "share/sns_icons"%></div>
               <div><%= @photo.views_count %>浏览 | <%= @photo.comments_count %>评论</div>
             </div>
             
             <div class="comment">
               <div class="mb20 clearfix">
                 <div class="title">
+                  <%=link_to "#", :class => "btn_gray float_r" do %>
+                    <span>添加评论</span>
+                  <% end %>
+                  <h3>评论</h3>
                 </div>
               </div>
-              
+              <%= render "comments/comment_list" %>
+
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="right"></div>
+    <div class="right">
+      <div class="sidebox">
+        <div class="title"><h3>热门酒款</h3></div>
+        <div class="main">
+          <ul class="sidewine">
+             <%= render :partial => "wineries/hot_wine", :collection => @hot_wines, :as => :wine_detail %>
+          </ul>
+        </div>
+      </div>
+    </div>
 
     <div class="clear"></div>
 
