--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -107,7 +107,7 @@ textarea.wine_intro {width:500px;height:200px;}
 .form th, .form td {padding:5px;}
 
 /*----------login register---------*/
-#login {width:772px;margin:0 auto;padding-top:100px;}
+#login {width:772px;margin:0 auto;padding-top:30px;}
 #login .error, #register .error {margin-bottom:20px;}
 .login .boxstyle {margin: 0 20px 0 0;}
 .boxstyle {width:376px;background:url(../images/bg/login_m.gif) repeat-y left top;float:left;}
@@ -115,15 +115,36 @@ textarea.wine_intro {width:500px;height:200px;}
 .boxstyle .bot {background:url(../images/bg/login_b.gif) no-repeat left bottom;height:12px;}
 .login .boxstyle .mid {padding:20px 28px;height:150px;}
 .register .boxstyle .mid {padding:60px 28px 20px 28px;height:110px;}
-.boxstyle input.text {border:1px solid #fff;background-color:#fff;height:25px;width:300px;padding:0; vertical-align:middle;}
+.boxstyle input.text {border:1px solid #fff;background-color:#fff;height:25px;width:300px;padding:0;line-height:25px; vertical-align:middle;}
 .boxstyle .un, .boxstyle .pw {background:url(../images/bg/login_input.jpg) no-repeat left top;height:27px;padding:8px 10px;width:300px;margin:0 0 10px 0;}
 .boxstyle .rember_pw {line-height:41px;}
 .boxstyle .rember_pw a:hover {text-decoration:none;}
-#register {width:376px;margin:0 auto;padding-top:100px;}
+#register {width:376px;margin:0 auto;padding-top:30px;}
 #register .boxstyle .mid {padding:20px 28px;}
 #register p {font-size:13px;padding:0 0 5px 5px;}
 #register .location {padding-left:5px;}
 #register .submit {margin-top:20px;line-height:51px; overflow:hidden;}
+
+/*-------------first recommend--------------*/
+#recommend .wel {background:url(../images/common/recommend_top.jpg) no-repeat left top;height:138px;padding:40px 0 0 70px;}
+#recommend .paper {background:url(../images/bg/paper_mid.jpg) repeat-y left top;}
+#recommend .paper .mid {padding:10px 0;}
+#recommend .paper .top {background:url(../images/bg/paper_top.jpg) no-repeat left top;height:30px;}
+#recommend .paper .bot {background:url(../images/bg/paper_bot.jpg) no-repeat left bottom;height:40px;}
+#recommend h1.zh {font-size:14px;}
+#recommend h1.en {font-size:12px;}
+#recommend span {display:block;}
+#recommend .wine {margin-bottom:20px;}
+#recommend ul {padding: 0 70px;}
+#recommend .wine ul.line {border-bottom:1px dotted #ccc;padding-bottom:40px;margin-bottom:40px;}
+#recommend .wine li {float:left;width:250px;margin-right:25px;}
+#recommend .wine li.last {margin-right:0;}
+#recommend .wine img {width:130px;float:left;margin-right:20px;}
+#recommend .wine .meta {width:100px;float:left;}
+#recommend .user li {float:left;width:140px;margin-right:25px;}
+#recommend .user li.last {margin-right:0;}
+#recommend .user img {width:50px;float:left;margin-right:15px;}
+#recommend .user .meta {width:75px;float:left;}
 
 /*icon*/
 .icon_mail, .icon_like, .icon_add_album, .icon_delet, .icon_edit, .icon_add, .icon_delet2, .icon_comment, .icon_fol, .icon_fol_e, .icon_cellar {background:url(../images/icon/icon_all.gif) no-repeat;display:inline-block;}
