--- a/public/template/recommend.html
+++ b/public/template/recommend.html
@@ -38,7 +38,7 @@
     <div id="wrapper950">
     	<div id="recommend">
         	<div class="wel"><img src="images/common/recommend_wel.gif" width="626" height="95" /></div>
-              <div class="paper wine">
+<div class="paper wine">
             	<div class="top"></div>
                 <div class="mid">
                 	<ul class="line">
@@ -101,10 +101,10 @@
                         </li>
                         <div class="clear"></div>
                     </ul>
-                  </div>
+</div>
                 <div class="bot"></div>
             </div>
-            <div class="paper user">
+<div class="paper user">
             	<div class="top"></div>
                 <div class="mid">
                     <ul>
@@ -112,7 +112,7 @@
                    	    	<img src="images/userimage/1.jpg" width="50" height="50" />
                         	<div class="meta">
                                   不良夏生
-                        <span class="location">上海</span>
+                  <span class="location">上海</span>
                                 <input name="" type="checkbox" value="" checked="checked" />
                           </div>
                       </li>
@@ -138,7 +138,7 @@
                                   不良夏生
                                 <span class="location">上海</span>
                                 <input name="" type="checkbox" value="" checked="checked" />
-        </div>
+</div>
                         </li>
                         <li class="last">
                    	    	<img src="images/userimage/06.jpg" width="50" height="50" />
@@ -153,6 +153,7 @@
                   </div>
                 <div class="bot"></div>
             </div>
+            <div class="align_c mt20"><a href="index.html"><img src="images/common/go.jpg" alt="开始吧！" width="176" height="51" /></a></div>
         </div>
     </div>
 </body>
