--- a/public/template/album_photo_list.html
+++ b/public/template/album_photo_list.html
@@ -63,7 +63,7 @@
             <div class="clear"></div>
           </div>
       <div class="title_btn">
-          	<div class="btn_action"><a href="#" class="btn_gray mr5"><span>编辑相册属性</span></a><a href="album_photo_upload.html" class="btn_gray mr5"><span>添加照片</span></a><a href="album.html" class="btn_gray"><span>返回相册首页</span></a></div>
+          	<div class="btn_action"><a href="album_property.html" class="btn_gray mr5"><span>编辑相册属性</span></a><a href="album_photo_upload.html" class="btn_gray mr5"><span>添加照片</span></a><a href="album.html" class="btn_gray"><span>返回相册首页</span></a></div>
             <h1>吃货那点事儿 <span class="font12">(共10张)</span></h1>
             <div class="clear"></div>
       </div>
