--- a/public/template/myhp.html
+++ b/public/template/myhp.html
@@ -45,7 +45,7 @@
             <div class="hp_info">
                 <div class="username">不良夏生</div>
                 <div class="mystatu">准备小宇宙爆发...<span><a href="#">修改</a></span></div>
-                <div class="item"><a class="icon_mail" href="#">私信</a> | <a href="#">设置</a></div>
+                <div class="item"><span class="icon_fol mr5">已关注</span><span class="icon_fol_e mr5">互相关注<span class="cancl_fol"> <a href="#">(取消)</a></span><a href="#" class="btn_gray"><span>加关注</span></a></span><a class="icon_mail" href="#">发私信</a></div>
                 <ul class="hp_navi">
                     <li><a href="cellar.html">12<br/>藏酒</a></li>
                     <li><a href="myhp_wine_list.html">12<br/>
