--- a/public/template/message_list.html
+++ b/public/template/message_list.html
@@ -2,18 +2,48 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
+<title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
+<link href="stylesheets/setting.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-	<div id="mainspace860">
-    	<div id="message">
-            <div class="title clearfix">
-                <div class="message_search"><div class="search_space"><input name="" type="text" placeholder="查找联系人或私信内容"/><a href="#" class="search_btn"></a></div><a class="btn_gray mr5" href="#"><span>发送私信</span></a></div>
-                <h1>我的私信</h1>
+	<div id="header">
+    <div class="main950">
+        	<div id="logo"><img src="images/common/logo.gif" alt="iWine" width="299" height="43" /></div>
+            <form action="search.html">
+                <div id="top_search">
+                    <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
+                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                </div>
+            </form>
+            <div id="top_right">
+            	<ul>
+                	<li class="userbox">
+                    	<a class="userpic" href="#"><img src="images/userimage/06.jpg" width="20" height="20" /></a><a href="#"><img src="images/common/userbox_arrow.jpg" width="22" height="30" /></a>
+                    </li>
+                    <li class="top_add"><a href="#" class="btn_add">添加</a></li>
+                </ul>
             </div>
-            <div class="message_list">
+            <div class="clear"></div>
+        </div>
+    </div>
+    <div class="globel_navi">
+    	<ul>
+        	<li class="current"><a href="index.html">首页</a></li>
+            <li class="arrow"><a href="wine.html">酒款</a></li>
+            <li class="last arrow"><a href="winery.html">酒庄</a></li>
+            <div class="clear"></div>
+      </ul>
+    </div>
+    <div id="wrapper950">
+    	<div class="whitespace message">
+            <div class="title clearfix">
+                <div class="message_search"><a href="#" class="search_btn">搜索</a><input class="text" name="" type="text" placeholder="查找联系人或私信内容"/><a class="btn_gray" href="#"><span>发送私信</span></a></div>
+                <h1 class="main_title">我的私信</h1>
+                <div class="clear"></div>
+            </div>
+          	<div class="message_list">
             	<ul class="private_list">
                 	<li class="clearfix">
                     	<div class="userimg"><a href="#"><img src="images/userimage/001.jpg" width="48" height="48" /></a></div>
@@ -86,8 +116,15 @@
                       </div>
                     </li>
                 </ul>
+                <div class="pagination">
+                    <span class="disabled"> < </span><span class="current">1</span><a href="#?page=2">2</a><a href="#?page=3">3</a><a href="#?page=4">4</a><a href="#?page=5">5</a><a href="#?page=6">6</a><a href="#?page=7">7</a>...<a href="#?page=199">199</a><a href="#?page=200">200</a><a href="#?page=2"> > </a><br />
+                </div>
             </div>
-        </div>
+   	  </div>
+    </div>
+    <div id="footer">
+        <div class="link"><a href="#">关于我们</a> | <a href="#">联系我们</a> | <a href="#">帮助中心</a> | <a href="#">隐私条款</a> | <a href="#">用户协议</a> | <a href="#">网站地图</a> | <a href="#">意见反馈</a></div>
+        <div class="copyright">Copyright © 2011 iWine, Inc. All rights reserved. <a href="#">沪ICP备12345678号</a></div>
     </div>
 </body>
 </html>
